--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -42,7 +42,7 @@
       "company": "NAF SERVIZI SRL, Roma",
       "position": "Informatico / Administrativo consultora",
       "dates": "2012 - 2018",
-      "description": "Encargado de la creación de páginas y sitios web funcionales e intuitivos para los clientes usando Wordpress. Mantenimiento y actualizacion de las aplication web existentes para garantizar las seguridad y el rendimiento. Uso de sistema informaticos y tecnologico (excel, word). Servicio de gestoría por terceros."
+      "description": "Encargado de la creación de páginas y sitios web funcionales e intuitivos para los clientes usando Wordpress. Mantenimiento y actualizacion de las aplicaciones web existentes para garantizar las seguridad y el rendimiento. Uso de sistemas informaticos (excel, word). Servicios de gestoría por terceros."
     }
   },
   "projects": {
