--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -73,6 +73,10 @@
       "name": "Pokedex",
       "description": "Using the PokeAPI, I created a Pokedex where users can search for their favorite Pokemon. The project was developed using Angular."
     },
+    "Voltix": {
+      "name": "Voltix",
+      "description": "Voltix is a pilot project for Miluz. The platform is designed to manage electricity bill costs using data from an electricity meter installed by the company and comparing it with invoices uploaded via PDF. If discrepancies are detected, it triggers an alert and generates a detailed report."
+    },
     "githubFront": "GitHub Front",
     "githubBack": "GitHub Back",
     "viewProject": "View Project"
