--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "title": "DANIELE QUINTILIANI",
     "greeting": "HELLO! I'm Daniele!",
     "description1": "I'm a Full Stack Developer with {{age}} years and a passion that began when I was young with my Commodore64. Although my professional path led me to study Chemistry and Biology, I always kept my love for computers and video games alive.",
-    "description2": "In September 2023, I decided to change careers to pursue my true passion for programming. To refine my skills and learn industry best practices, I enrolled in an intensive Full Stack Web Developer bootcamp. During this program, I not only strengthened my proficiency in languages like JavaScript but also learned how to work on real-world projects, collaborate in teams, and utilize agile methodologies.",
+    "description2": "In 2020, I decided to change careers to pursue my true passion for programming. To refine my skills and learn industry best practices, I enrolled in an intensive Full Stack Web Developer bootcamp. During this program, I not only strengthened my proficiency in languages like JavaScript but also learned how to work on real-world projects, collaborate in teams, and utilize agile methodologies.",
     "description3": "This change has been an exciting challenge and an opportunity to combine my scientific background with my new focus on software development. I'm determined to continue growing in this field and to bring my skills and passion to every project I undertake.",
     "description4": "I hope you enjoy exploring my portfolio. Feel free to contact me for any projects or collaborations. I'm ready to take on new challenges and continue growing in this exciting world of programming."
   },
